--- a/views/admin/admin_view_students.ejs
+++ b/views/admin/admin_view_students.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>ATS | Student | Dashboard</title>
+    <title>ATS | Admin | View Students</title>
     <%- include('../partials/header') %>
   </head>
   <body>
@@ -15,7 +15,7 @@
       <!-- Page Header-->
       <header class="py-4">
         <div class="container-fluid py-2">
-          <h1 class="h3 fw-normal mb-0">Add Students to Organization</h1>
+          <h1 class="h3 fw-normal mb-0">Students belonging to your Organization</h1>
         </div>
       </header>
       <!-- Forms Section-->
@@ -31,7 +31,6 @@
                 <div class="card-body">
                   <p class="text-sm lead">You can search by any parameters (username, Name, email, contact, etc.)</p>
                   
-                  <a href="<%= origin %>/admin/<%= userId %>/view_students" class="btn btn-dark btn-md">View Selected</a>
                   <table id="example" class="table table-striped table-bordered" style="width:100%">
                     <thead>
                         <tr>
@@ -39,7 +38,7 @@
                             <th>Full Name</th>
                             <th>email</th>
                             <th>Contact</th>
-                            <th>Add</th>
+                            <th>View</th>
                         </tr>
                     </thead>
                     <tbody style="vertical-align: middle;">
@@ -49,20 +48,14 @@
                               <td><%= student.full_name %></td>
                               <td><%= student.email %></td>
                               <td><%= student.contact %></td>
-                              <td><input name="candidates" value="<%= student.userId%>" type="checkbox" class="form-check-input" style="width: 100%; height: 30px"></td>
+                              <td><a href="<%= origin %>/student/<%= student.userId %>/view" class="btn btn-lg btn-info" style="width: 100%;">View</a></td>
                           </tr>
                         <% }) %>
                     </tbody>
                   </table>
                   
 
-                  <button id="toggle" class="btn btn-lg btn-warning mt-2">Toggle All</button>
-                  <button id="reset" class="btn btn-lg btn-danger mt-2">Reset</button>
-                  <button id="save" class="btn btn-lg btn-secondary mt-2">Save Changes</button>
-                  <form action="<%= origin %>/admin/<%= userId %>/add_students" method="POST">
-                    <input id="selectedList" name="selectedList" type="text" style="display: none;">
-                    <button id="submit" type="submit" class="btn btn-lg btn-success mt-2">Submit</button>
-                  </form>
+                  <a href="<%= origin %>/admin/<%= userId %>/add_students" class="btn btn-lg btn-dark">Add New Students</a>
                   
                   <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
                   <script src="https://cdn.datatables.net/1.12.0/js/jquery.dataTables.min.js"></script>
@@ -71,38 +64,6 @@
                       $(document).ready(function () {
                           $('#example').DataTable();
                       });
-                  </script>
-
-                  <script>
-
-                    const toggleBtn = document.getElementById('toggle');
-                    toggleBtn.addEventListener('click', (e) => {
-                      candidates = document.getElementsByName('candidates');
-                      for(let i=0; i<candidates.length; i++) {
-                        candidates[i].checked = !candidates[i].checked;
-                      }
-                    });
-
-                    const resetBtn = document.getElementById('reset');
-                    resetBtn.addEventListener('click', (e) => {
-                      candidates = document.getElementsByName('candidates');
-                      for(let i=0; i<candidates.length; i++) {
-                        candidates[i].checked = false;
-                      }
-                    });
-
-                    const saveBtn = document.getElementById('save');
-                    saveBtn.addEventListener('click', (e) => {
-                      candidates = document.getElementsByName('candidates');
-                      const selected = [];
-                      for(let i=0; i<candidates.length; i++) {
-                        if(candidates[i].checked) selected.push(candidates[i].value);
-                      }
-                      console.log(selected);
-                      selectedList = document.getElementById('selectedList');
-                      selectedList.value = JSON.stringify(selected);
-                    });
-                    
                   </script>
 
                 </div>
