--- a/views/student/student_dashboard.ejs
+++ b/views/student/student_dashboard.ejs
@@ -3,6 +3,38 @@
   <head>
     <title>ATS | Student | Dashboard</title>
     <%- include('../partials/header') %>
+
+    <style>
+
+      #view-card {
+        background-color: #9dfac7;
+      }
+      #view-card:hover {
+        opacity: 0.8;
+      }
+
+      #add-card {
+        background-color: #9aaef5;
+      }
+      #add-card:hover {
+        opacity: 0.8;
+      }
+
+      #settings-card {
+        background-color: #faa65c;
+      }
+      #settings-card:hover {
+        opacity: 0.8;
+      }
+
+      #profile-card {
+        background-color: #f0b4cb;
+      }
+      #profile-card:hover {
+        opacity: 0.8;
+      }
+
+    </style>
   </head>
   <body>
     <%- include('../partials/sidebar') %>
@@ -15,91 +47,50 @@
       <!-- Page Header-->
       <header class="py-4">
         <div class="container-fluid py-2">
-          <h1 class="h3 fw-normal mb-0">Internship Notification Form</h1>
+          <h1 class="h3 fw-normal mb-0">Student Dashboard</h1>
         </div>
       </header>
       <!-- Forms Section-->
       <section class="pb-5"> 
         <div class="container-fluid">
           <div class="row">
-            <!-- HR Info -->
-            <div class="col-lg-12 col-sm-12">
-              <div class="card">
-                <div class="card-header border-bottom" style="background-color: #c3decf;">
-                  <h3 style="font-size: x-large;" class="lead mb-0">HR info</h3>
-                </div>
-                <div class="card-body">
-                  <p class="text-sm lead">We'll never share your personal information with anyone else</p>
-                  
-                  <form id="poc_info">
-                    <div class="row">
-                      <div class="col-lg-6 col-sm-12">
-                        <div class="mb-3">
-                          <label class="form-label" for="email_poc1"><span style="color: maroon;">*</span> Email address of POC-1</label>
-                          <input class="form-control" name="email_poc1" id="email_poc1" type="email" aria-describedby="emailHelp" placeholder="name@example.com">
-                        </div>
-                        <div class="mb-3">
-                          <label class="form-label" for="name_poc1"><span style="color: maroon;">*</span> Name of POC-1</label>
-                          <input class="form-control" name="name_poc1" id="name_poc1" type="string">
-                        </div>
-                        <div class="mb-3">
-                          <label class="form-label" for="designation_poc1"><span style="color: maroon;">*</span> Designation of POC-1</label>
-                          <input class="form-control" name="designation_poc1" id="designation_poc1" type="string">
-                        </div>
-                        <div class="mb-3">
-                          <label class="form-label" for="mob_poc1"><span style="color: maroon;">*</span> Mobile Number of POC-1</label>
-                          <input class="form-control" name="mob_poc1" id="mob_poc1" type="number">
-                        </div>
-                      </div>
-                      <div class="col-lg-6 col-sm-12">
-                        <div class="mb-3">
-                          <label class="form-label" for="email_poc2">Email address of POC-2</label>
-                          <input class="form-control" name="email_poc2" id="email_poc2" type="email" aria-describedby="emailHelp" placeholder="name@example.com">
-                        </div>
-                        <div class="mb-3">
-                          <label class="form-label" for="name_poc2">Name of POC-2</label>
-                          <input class="form-control" name="name_poc2" id="name_poc2" type="string">
-                        </div>
-                        <div class="mb-3">
-                          <label class="form-label" for="designation_poc2">Designation of POC-2</label>
-                          <input class="form-control" name="designation_poc2" id="designation_poc2" type="string">
-                        </div>
-                        <div class="mb-3">
-                          <label class="form-label" for="mob_poc2">Mobile Number of POC-2</label>
-                          <input class="form-control" name="mob_poc2" id="mob_poc2" type="number">
-                        </div>
-                      </div>
-                    </div>
-                    <!-- <button class="btn btn-primary" type="submit">Submit</button> -->
-                  </form>
-                </div>
-              </div>
-            </div>
             
-
-            <!-- Confirmation Form -->
             <div class="col-lg-6 col-sm-12">
-              <div class="card">
-                <div class="card-header border-bottom" style="background-color: #c3decf;">
-                  <h3 style="font-size: x-large;" class="lead mb-0">CONFIRM CHANGES</h3>
-                </div>
-                <div class="card-body">
-                  <form action="/company/<%= userId %>/inf/create" id="selection_process" method="POST">
-                    <p class="lead">
-                      The INF submitted can be edited later. However, the changes will be permanently saved only after approval from CDC-SCPT.
-                    </p>
-                    <input id="infData" type="text" name="infData" style="display: none;">
-                    <button id="submit" type="button" class="btn btn-lg btn-block btn-secondary">Save Changes</button>
-                    <button type="submit" class="btn btn-lg btn-block btn-primary">SUBMIT</button>
-                    <p id="mssg">
-                      <span style="color:#570814">Please save the changes before submitting</span>
-                    </p>
-                  </form>
+              <a href="<%= origin %>/student/<%= userId %>/view_orgs" style="width: 100%; text-decoration:none;">
+              <div id="view-card" class="card" style="width: 100%; height: 100%;">
+                <div class="card-body pb-4 pt-4">
+                  <h2 class="display-4" style="font-size: 48px; color: black; text-align: center;">Enrolled Organizations</h2>
                 </div>
               </div>
+              </a>
             </div>
-
-            <!-- Job Notification Form  -->
+            <div class="col-lg-6 col-sm-12">
+              <a href="<%= origin %>/admin/<%= userId %>/add_students" style="width: 100%; text-decoration:none;">
+              <div id="add-card" class="card" style="width: 100%;">
+                <div class="card-body pb-4 pt-4">
+                  <h2 class="display-4" style="font-size: 48px; color: black; text-align: center;">Mark as Present</h2>
+                </div>
+              </div>
+              </a>
+            </div>
+            <div class="col-lg-6 col-sm-12">
+              <a href="<%= origin %>/admin/<%= userId %>/dashboard" style="width: 100%; text-decoration:none;">
+              <div id="settings-card" class="card" style="width: 100%;">
+                <div class="card-body pb-4 pt-4">
+                  <h2 class="display-4" style="font-size: 48px; color: black; text-align: center;">Track Attendance</h2>
+                </div>
+              </div>
+              </a>
+            </div>
+            <div class="col-lg-6 col-sm-12">
+              <a href="<%= origin %>/student/<%= userId %>/profile" style="width: 100%; text-decoration:none;">
+              <div id="profile-card" class="card" style="width: 100%;">
+                <div class="card-body pb-4 pt-4">
+                  <h2 class="display-4" style="font-size: 48px; color: black; text-align: center;">My Profile</h2>
+                </div>
+              </div>
+              </a>
+            </div>
             
 
 
