setup/subroutine for face-api

--- a/views/student/student_dashboard.ejs
+++ b/views/student/student_dashboard.ejs
@@ -65,7 +65,7 @@
               </a>
             </div>
             <div class="col-lg-6 col-sm-12">
-              <a href="<%= origin %>/admin/<%= userId %>/add_students" style="width: 100%; text-decoration:none;">
+              <a href="<%= origin %>/student/<%= userId %>/give_attendance_select_org" style="width: 100%; text-decoration:none;">
               <div id="add-card" class="card" style="width: 100%;">
                 <div class="card-body pb-4 pt-4">
                   <h2 class="display-4" style="font-size: 48px; color: black; text-align: center;">Mark as Present</h2>
