--- a/views/student/student_dashboard.ejs
+++ b/views/student/student_dashboard.ejs
@@ -74,7 +74,7 @@
               </a>
             </div>
             <div class="col-lg-6 col-sm-12">
-              <a href="<%= origin %>/admin/<%= userId %>/dashboard" style="width: 100%; text-decoration:none;">
+              <a href="<%= origin %>/student/<%= userId %>/dashboard" style="width: 100%; text-decoration:none;">
               <div id="settings-card" class="card" style="width: 100%;">
                 <div class="card-body pb-4 pt-4">
                   <h2 class="display-4" style="font-size: 48px; color: black; text-align: center;">Track Attendance</h2>
@@ -91,7 +91,15 @@
               </div>
               </a>
             </div>
-            
+            <div class="col-lg-6 col-sm-12">
+              <a href="<%= origin %>/student/<%= userId %>/register_face" style="width: 100%; text-decoration:none;">
+              <div id="add-card" class="card" style="width: 100%;">
+                <div class="card-body pb-4 pt-4">
+                  <h2 class="display-4" style="font-size: 48px; color: black; text-align: center;">Register Face</h2>
+                </div>
+              </div>
+              </a>
+            </div>
 
 
           </div>
