--- a/views/admin/admin_student_profile.ejs
+++ b/views/admin/admin_student_profile.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>ATS | Admin | View Students</title>
+    <title>ATS | Student | Profile</title>
     <%- include('../partials/header') %>
   </head>
   <body>
@@ -15,7 +15,6 @@
       <!-- Page Header-->
       <header class="py-4">
         <div class="container-fluid py-2">
-          <h1 class="h3 fw-normal mb-0">Students belonging to your Organization</h1>
         </div>
       </header>
       <!-- Forms Section-->
@@ -26,36 +25,33 @@
             <div class="col-lg-12 col-sm-12">
               <div class="card">
                 <div class="card-header border-bottom" style="background-color: #c3decf;">
-                  <h3 style="font-size: x-large;" class="lead mb-0">Search Students</h3>
+                  <h3 style="font-size: x-large;" class="lead mb-0">Profile Information</h3>
                 </div>
                 <div class="card-body">
-                  <p class="text-sm lead">You can search by any parameters (username, Name, email, contact, etc.)</p>
                   
                   <table id="example" class="table table-striped table-bordered" style="width:100%">
                     <thead>
-                        <tr>
-                            <th>Username</th>
-                            <th>Full Name</th>
-                            <th>email</th>
-                            <th>Contact</th>
-                            <th>View</th>
-                        </tr>
+                        
                     </thead>
                     <tbody style="vertical-align: middle;">
-                        <% detailsData.forEach((student) => { %>
-                          <tr>
-                              <td><%= student.username %></td>
-                              <td><%= student.full_name %></td>
-                              <td><%= student.email %></td>
-                              <td><%= student.contact %></td>
-                              <td><a href="<%= origin %>/admin/<%= userId %>/view_student/<%= student.userId %>/" class="btn btn-lg btn-info" style="width: 100%;">View</a></td>
-                          </tr>
-                        <% }) %>
+                        <tr>
+                            <td><b>Username</b></td>
+                            <td><%= studentData.username %></td>
+                        </tr>
+                        <tr>
+                            <td><b>Full Name</b></td>
+                            <td><%= studentData.full_name %></td>
+                        </tr>
+                        <tr>
+                            <td><b>Email</b></td>
+                            <td><%= studentData.email %></td>
+                        </tr>
+                        <tr>
+                            <td><b>Contact</b></td>
+                            <td><%= studentData.contact %></td>
+                        </tr>
                     </tbody>
                   </table>
-                  
-
-                  <a href="<%= origin %>/admin/<%= userId %>/add_students" class="btn btn-lg btn-dark">Add New Students</a>
                   
                   <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
                   <script src="https://cdn.datatables.net/1.12.0/js/jquery.dataTables.min.js"></script>
