--- a/views/student/student_admin_profile.ejs
+++ b/views/student/student_admin_profile.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>ATS | Student | View Organizations</title>
+    <title>ATS | Admin | Profile</title>
     <%- include('../partials/header') %>
   </head>
   <body>
@@ -15,7 +15,6 @@
       <!-- Page Header-->
       <header class="py-4">
         <div class="container-fluid py-2">
-          <h1 class="h3 fw-normal mb-0">Organization to which you are enrolled</h1>
         </div>
       </header>
       <!-- Forms Section-->
@@ -26,31 +25,31 @@
             <div class="col-lg-12 col-sm-12">
               <div class="card">
                 <div class="card-header border-bottom" style="background-color: #c3decf;">
-                  <h3 style="font-size: x-large;" class="lead mb-0">Search Organizations</h3>
+                  <h3 style="font-size: x-large;" class="lead mb-0">Profile Information</h3>
                 </div>
                 <div class="card-body">
-                  <p class="text-sm lead">You can search by any parameters (username, Name, email, contact, etc.)</p>
                   
                   <table id="example" class="table table-striped table-bordered" style="width:100%">
                     <thead>
-                        <tr>
-                            <th>Organization Name</th>
-                            <th>email</th>
-                            <th>Contact</th>
-                            <th>Number of Students Enrolled</th>
-                            <th>View</th>
-                        </tr>
+                        
                     </thead>
                     <tbody style="vertical-align: middle;">
-                        <% detailsData.forEach((org) => { %>
-                          <tr>
-                              <td><%= org.companyName %></td>
-                              <td><%= org.email %></td>
-                              <td><%= org.contact %></td>
-                              <td><%= org.students.length %></td>
-                              <td><a href="<%= origin %>/student/<%= userId %>/view_org/<%= org.adminId %>/" class="btn btn-lg btn-info" style="width: 100%;">View</a></td>
-                          </tr>
-                        <% }) %>
+                        <tr>
+                            <td><b>Admin Name</b></td>
+                            <td><%= adminData.companyName %></td>
+                        </tr>
+                        <tr>
+                            <td><b>Email</b></td>
+                            <td><%= adminData.email %></td>
+                        </tr>
+                        <tr>
+                            <td><b>Contact</b></td>
+                            <td><%= adminData.contact %></td>
+                        </tr>
+                        <tr>
+                            <td><b>No. of students enrolled</b></td>
+                            <td><%= adminData.students.length %></td>
+                        </tr>
                     </tbody>
                   </table>
                   
